// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BtnAdd /> should render a default add-button 1`] = `
<div
  className="orizzonte__btn-wrapper"
>
  <button
    className="orizzonte__btn orizzonte__btn-add"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
     
  </button>
</div>
`;

exports[`<BtnAdd /> should render a disabled add-button 1`] = `
<div
  className="orizzonte__btn-wrapper"
>
  <button
    className="orizzonte__btn orizzonte__btn-add orizzonte__btn--disabled"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
     
  </button>
</div>
`;

exports[`<BtnAdd /> should render a labeled add-button 1`] = `
<div
  className="orizzonte__btn-wrapper"
>
  <button
    className="orizzonte__btn orizzonte__btn-add orizzonte__btn--labeled"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Add more groups
  </button>
</div>
`;

exports[`<BtnAdd /> should render a left-positioned add-button 1`] = `
<div
  className="orizzonte__btn-wrapper orizzonte__btn-wrapper--left"
>
  <button
    className="orizzonte__btn orizzonte__btn-add"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
     
  </button>
</div>
`;

exports[`<BtnAdd /> should render an add-button that is (always) shown 1`] = `
<div
  className="orizzonte__btn-wrapper"
>
  <button
    className="orizzonte__btn orizzonte__btn-add orizzonte__btn--shown"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
     
  </button>
</div>
`;

exports[`<BtnAdd /> should render an add-button with expanded list of available filters 1`] = `
<div
  className="orizzonte__btn-wrapper"
>
  <button
    className="orizzonte__btn orizzonte__btn-add orizzonte__btn--shown"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
     
  </button>
  <OrizzonteList
    cache={Object {}}
    doneBtn={true}
    doneBtnLabel={null}
    isFilterGroup={false}
    minWidth={null}
    onApply={[Function]}
    onRemove={[Function]}
    onUpdate={[Function]}
    orientation="right"
    removeBtn={false}
    removeBtnLabel={null}
    syncCacheToGroup={[Function]}
    values={Object {}}
  >
    <a
      className="orizzonte__item-clickable"
      href="#"
      key="orizzonte-add-0"
      onClick={[Function]}
    >
      Filter 1
    </a>
    <a
      className="orizzonte__item-clickable"
      href="#"
      key="orizzonte-add-1"
      onClick={[Function]}
    >
      Filter 2
    </a>
  </OrizzonteList>
</div>
`;
